@@ -7,19 +7,14 @@ dependencies {
     implementation(libs.openrs2.deob.annotations)
 }
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
-    }
-}
-
-tasks.withType(JavaCompile::class) {
-    options.encoding = "UTF-8"
-}
-
 application {
     mainClass = "client"
-    applicationDefaultJvmArgs = listOf("-Xmx256m", "-Dsun.java2d.noddraw=true")
+    applicationDefaultJvmArgs = listOf(
+        "-Xmx256m",
+        "-Dsun.java2d.noddraw=true",
+        "--add-opens",
+        "java.base/java.lang=ALL-UNNAMED",
+    )
 }
 
 tasks.run.configure {
